# mori

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .team-anchor.md  .typos.toml  CMakeLists.txt  MANIFEST.in  MORI-CCO-GUIDE.html  MORI-EP-BENCHMARK.html  MORI-EP-GUIDE.html  MORI-IO-BENCHMARK.html  MORI-IO-GUIDE.html  MORI-IR-GUIDE.html  MORI-SHMEM-GUIDE.html  MORI-UMBP-PD-BENCHMARK.html  MORI-UMBP-SINGLE-NODE-GUIDE.html  MORI_IR_INTEGRATION.html  MORI_JIT_ARCHITECTURE.html  PROFILER.html  README.md  README_HIER_ALLGATHER.md  build.sh  build_allreduce.sh  build_teamA.sh  build_umbp.sh  cco.md  genindex.html  index.html  install_deps.sh  installation.html  jax_playground.py  mori.cpp  mori_playground.py  mori_rocm700_support.diff  objects.inv  pyproject.toml  quickstart.html  rdma.md  rdma_bandwidth_utilization.html  (+11 more)
benchmark/: CMakeLists.txt
benchmark/cco/: device_utils.hpp  p2p_get_bw.cpp  p2p_get_latency.cpp  p2p_put_bw.cpp  p2p_put_latency.cpp  util.cpp  util.hpp
benchmark/shmem/: util.hpp
examples/: CMakeLists.txt  async_ll_dispatch_example.cpp
examples/a2a_gemm/: README.md  a2a_gemm_example.py  flydsl_gated_hgemm.py
examples/application/: context.cpp  ibverbs_test.cpp
examples/benchmarks/: accum_perf.cpp  accum_test.cpp  atomic_perf.cpp  p2p_bandwidth.cpp  warp_accum.cpp
examples/cco/: README.md  lsa_allreduce.cpp  lsa_barrier.cpp  lsa_memcheck.cpp
examples/cco/01_barrier/: main.py
examples/cco/02_lsa_put/: lsa_put_kernel.hip  main.py
examples/cco/03_flydsl_put/: README.md  main.py
examples/cco/06_flydsl_gda_modes/: main.py
examples/cco/cpp/: 01_lsa_put.cpp  02_gda_put.cpp
examples/cco/python/: cco_example_common.py
examples/collective/: all_gather.cpp  all_reduce.cpp  allreduce.cpp  allreduce_example.cpp  reduce_scatter_kernels.hpp  reduce_scatter_test.cpp  sdma_all2all_example.cpp  sdma_allgather_example.cpp  sdma_allreduce_example.cpp  sdma_allreduce_pipeline_example.cpp  sdma_allreduce_sync_example.cpp  shmem_allreduce_example.cpp
examples/collective/inter_node/: inter_node_benchmark.cpp  oneshot_all2all.cpp
examples/collective/intra_node/: intra_node_benchmark.cpp  intra_node_example.cpp
examples/collective/primitives/: all_gather_example.cpp
examples/custom_allreduce/: custom_allreduce.cpp
examples/dist_rdma_ops/: dist_write.cpp  read.cpp
examples/fsdp/: bench_qwen7b_allgather.py
examples/fsdp_sdma/: README.md  RESULTS.md  bench.py  e2e_gate2.csv  loss_curve.csv  loss_curve_w16.csv  make_bench_charts.py  make_chart.py  make_loss_curve.py  mori_allgather.py  result_hier.json  result_hier2.json  result_native_fair.json  result_native_fair2.json  run2node.sh
examples/fsdp_sdma/bench_data/: overlap_w8.csv  ut_w16.csv  ut_w8.csv
examples/fsdp_sdma/scripts/: REPRODUCE.md  run_e2e.sh  run_ut.sh
examples/io/: example.py  tcp_example.cpp
examples/local_rdma_ops/: atomic_gpu.cpp  send_recv.cpp  send_recv_gpu.cpp  utils.hpp  write_gpu.cpp  write_inline_gpu.cpp
examples/moe/: README.md  correctness_test.sh  test_dispatch_combine.cpp
examples/moe/dispatch_combine_kernels/: dispatch_combine.cpp  dispatch_combine.hpp  intranode.hpp
examples/monitoring/: umbp_master.scrape.yml
examples/sdma/: CLI11.hpp  common.cpp  common.hpp  cu_xgmi_bench.cpp  multiring_xgmi_bench.cpp  run_bandwidth_multi_producer.sh  run_bandwidth_single_producer.sh  run_contention_multi_queue.sh  run_contention_single_queue.sh  run_latency_breakdown_single_producer.sh  run_packet_rate.sh  sdma_bw.cpp  sdma_bw_allgather.cpp  sdma_bw_kernel.cc  sdma_bw_kernel.cpp  sdma_bw_kernel.h  sdma_latency.cpp  sdma_latency_kernel.cpp  sdma_latency_kernel.h  sdma_put_test.cpp  sdma_queue_host.hpp  sdma_rate.cpp  sdma_rate_kernel.cpp  sdma_rate_kernel.h  sdma_self_copy_test.cpp  timestamp_handle.hpp  utils.cpp  utils.hpp
examples/shmem/: all2all_test.cpp  allgather_test.cpp  atomic_fetch_thread.cpp  atomic_nonfetch_thread.cpp  concurrent_get_thread.cpp  concurrent_put_imm_thread.cpp  concurrent_put_signal_thread.cpp  concurrent_put_thread.cpp  dispatch_combine.cpp  multithread_multi_gpu.cpp  put_allgather_large.cpp  put_dispatch.cpp  put_thread.cpp  put_thread_allgather.cpp  put_warp.cpp  sdma_put_test.cpp  shm_copy_test.cpp  shm_put_rdma_test.cpp  shmem_python_api.py  simple_shm_test.cpp  static_link_siof_test.cpp  test_p2p_direct_access.cpp  test_put_schar_nbi_thread.cpp
examples/umbp/: umbp_master_client_demo.py
examples/utils/: args_parser.cpp  args_parser.hpp  common_utils.hpp  test_vmm_mpi_write.cpp
perftest/: CMakeLists.txt
perftest/shmem/: demo  demo.cpp  device_utils.hpp  p2p_get_bw.cpp  p2p_get_latency.cpp  p2p_put_bw.cpp  p2p_put_latency.cpp  ring_put_bw.cpp  util.cpp  util.hpp
sglang-kv-indexer/: Cargo.toml  build.rs  lab.sh
sglang-kv-indexer/proto/: kv_indexer.proto
sglang-kv-indexer/src/: bridge.rs  lib.rs  service.rs
sglang-kv-indexer/tests/: bridge_replay.rs  grpc_contract.rs  redis_integration.rs
src/application/: CMakeLists.txt  mori_exports.lds
src/cco/: CMakeLists.txt  cco_init.cpp  cco_memory.cpp
src/collective/: CMakeLists.txt  topology_detector.cpp
src/ffi/: CMakeLists.txt  mori_xla_ffi_handle_mgr.hpp  mori_xla_ffi_ops.cpp
src/io/: CMakeLists.txt  backend_factory.cpp  engine.cpp  fallback_backend.cpp  protocol.cpp  transfer_status_internal.hpp
src/metrics/: CMakeLists.txt  prometheus_metrics_server.cpp
src/ops/: CMakeLists.txt  cast.cpp
src/pybind/: CMakeLists.txt  device_link_stub.hip  dlpack_min.hpp  dtype_utils.hpp  mori.cpp  mori.hpp  mori_core.cpp  mori_core.hpp  mori_xla_ffi_ops.cpp  ops.cpp  ops.hpp  pybind.cpp  pybind_ccl.cpp  pybind_core.cpp  pybind_ffi.cpp  pybind_io.cpp  pybind_ops.cpp  pybind_shmem.cpp  pybind_umbp.cpp  pybind_xla_ffi_ops.cpp  torch_utils.hpp
src/shmem/: CMakeLists.txt  init.cpp  internal.hpp  memory.cpp  point_to_point.cpp  runtime.cpp  shmem_device_api_wrapper.cpp
src/umbp/: CMakeLists.txt  umbp_client.cpp  umbp_client_factory.cpp
src/xshmem/: CMakeLists.txt  xshmem_init.cpp  xshmem_memory.cpp
tests/cpp/: CMakeLists.txt  test_local_expert_count.cpp
(+1245 files in other folders)
