[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "ninja",
    # cmake is intentionally NOT listed here. As a build-isolation requirement
    # pip installs its own (latest) cmake into an ephemeral env; gtest_discover_tests
    # then bakes that build cmake's version and absolute path into the generated
    # ctest files. The CI test step later runs the suite with the image's ctest --
    # a different install, while the build-env cmake has already been deleted --
    # which then fails to parse/run those files. Omitting cmake makes the build use
    # the image's cmake (on PATH), so the build cmake and the runtime ctest are the
    # same install (setup.py errors clearly if cmake is missing).
    "pybind11",
    "Cython>=3.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "python/mori/_version.py"
write_to_template = "__version__ = '{version}'\n"
fallback_version = "0.1.0"

[project]
name = "amd_mori"
dynamic = ["version"]
description = "Modular RDMA Interface — GPU communication library for P2P, RDMA/IBGDA, and SDMA"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
# FlyDSL device bindings (mori.cco.device.flydsl) are optional — only needed to
# author/run cco GDA/LSA kernels from FlyDSL. Left unpinned so mori integrates
# with whatever FlyDSL the host environment already provides. Install with:
#   pip install amd_mori[flydsl]
flydsl = ["flydsl"]

[project.urls]
Homepage = "https://github.com/ROCm/mori"
Repository = "https://github.com/ROCm/mori"

[project.scripts]
mori = "mori.cli:main"
